@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.query.algebra.evaluation.iterator;
 
@@ -41,13 +44,14 @@ import org.eclipse.rdf4j.query.QueryEvaluationException;
  * @author James Leigh
  * @author Arjohn Kampman
  */
+@Deprecated(since = "4.1.0")
 public class OrderIterator extends DelayedIteration<BindingSet, QueryEvaluationException> {
 
 	private static class SerializedQueue<E extends Serializable> extends AbstractQueue<E> implements Closeable {
 
 		private final File file;
 
-		private ObjectOutputStream output;
+		private final ObjectOutputStream output;
 
 		private ObjectInputStream input;
 
@@ -134,9 +138,9 @@ public class OrderIterator extends DelayedIteration<BindingSet, QueryEvaluationE
 		@Override
 		public int size() {
 			if (next == null) {
-				return (int) size;
+				return size;
 			} else {
-				return (int) size + 1;
+				return size + 1;
 			}
 		}
 
@@ -209,7 +213,7 @@ public class OrderIterator extends DelayedIteration<BindingSet, QueryEvaluationE
 			while (iterators.get(i).hasNext()) {
 				E key = iterators.get(i).next();
 				if (!head.containsKey(key)) {
-					head.put(key, new LinkedList<>(Arrays.asList(i)));
+					head.put(key, new LinkedList<>(List.of(i)));
 					break;
 				} else if (!distinct) {
 					head.get(key).add(i);
@@ -277,17 +281,17 @@ public class OrderIterator extends DelayedIteration<BindingSet, QueryEvaluationE
 			while (iter.hasNext()) {
 				if (list.size() >= syncThreshold && list.size() < limit) {
 					SerializedQueue<BindingSet> queue = new SerializedQueue<>("orderiter");
-					sort(list).forEach(bs -> queue.add(bs));
+					sort(list).forEach(queue::add);
 					serialized.add(queue);
 					decrement(list.size() - queue.size());
 					list = new ArrayList<>(list.size());
-					if (threshold == null && serialized.stream().mapToLong(q -> q.size()).sum() >= limit) {
-						Stream<BindingSet> stream = serialized.stream().map(q -> q.peekLast());
-						threshold = stream.sorted(comparator).skip(serialized.size() - 1).findFirst().get();
+					if (threshold == null && serialized.stream().mapToLong(SerializedQueue::size).sum() >= limit) {
+						Stream<BindingSet> stream = serialized.stream().map(SerializedQueue::peekLast);
+						threshold = stream.sorted(comparator).skip(serialized.size() - 1).findFirst().orElseThrow();
 					}
 				} else if (list.size() >= limit2 || !distinct && threshold == null && list.size() >= limit) {
 					List<BindingSet> sorted = new ArrayList<>(limit2);
-					sort(list).forEach(bs -> sorted.add(bs));
+					sort(list).forEach(sorted::add);
 					decrement(list.size() - sorted.size());
 					list = sorted;
 					if (sorted.size() >= limit) {
@@ -305,11 +309,17 @@ public class OrderIterator extends DelayedIteration<BindingSet, QueryEvaluationE
 		} finally {
 			iter.close();
 		}
-		SortedIterators<BindingSet> iterator;
+
 		List<Iterator<BindingSet>> iterators = new ArrayList<>(serialized.size() + 1);
-		serialized.forEach(queue -> iterators.add(queue.iterator()));
+		serialized
+				.stream()
+				.map(SerializedQueue::iterator)
+				.forEach(iterators::add);
+
 		iterators.add(sort(list).iterator());
-		iterator = new SortedIterators<>(comparator, distinct, iterators);
+
+		SortedIterators<BindingSet> iterator = new SortedIterators<>(comparator, distinct, iterators);
+
 		return new LimitIteration<>(new CloseableIteratorIteration<>(iterator), limit);
 	}
 
