@@ -1,20 +1,28 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.query.algebra.evaluation.util;
 
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import java.time.Instant;
 import java.util.Arrays;
+import java.util.Date;
 import java.util.Iterator;
+import java.util.List;
 
 import org.eclipse.rdf4j.common.iteration.CloseableIteration;
+import org.eclipse.rdf4j.common.transaction.QueryEvaluationMode;
 import org.eclipse.rdf4j.model.Value;
-import org.eclipse.rdf4j.model.impl.ValueFactoryImpl;
+import org.eclipse.rdf4j.model.ValueFactory;
+import org.eclipse.rdf4j.model.impl.SimpleValueFactory;
 import org.eclipse.rdf4j.query.BindingSet;
 import org.eclipse.rdf4j.query.QueryEvaluationException;
 import org.eclipse.rdf4j.query.algebra.Order;
@@ -25,16 +33,21 @@ import org.eclipse.rdf4j.query.algebra.ValueExpr;
 import org.eclipse.rdf4j.query.algebra.evaluation.EvaluationStrategy;
 import org.eclipse.rdf4j.query.algebra.evaluation.QueryBindingSet;
 import org.eclipse.rdf4j.query.algebra.evaluation.QueryOptimizerPipeline;
+import org.eclipse.rdf4j.query.algebra.evaluation.QueryValueEvaluationStep;
 import org.eclipse.rdf4j.query.algebra.evaluation.ValueExprEvaluationException;
 import org.eclipse.rdf4j.query.algebra.evaluation.federation.FederatedService;
 import org.eclipse.rdf4j.query.algebra.evaluation.impl.EvaluationStatistics;
-import org.junit.Before;
-import org.junit.Test;
+import org.eclipse.rdf4j.query.algebra.evaluation.impl.QueryEvaluationContext;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 /**
  * @author james
  */
 public class OrderComparatorTest {
+	private static final ValueFactory vf = SimpleValueFactory.getInstance();
+	private final QueryEvaluationContext context = new QueryEvaluationContext.Minimal(
+			vf.createLiteral(Date.from(Instant.now())), null);
 
 	class EvaluationStrategyStub implements EvaluationStrategy {
 
@@ -63,6 +76,12 @@ public class OrderComparatorTest {
 		}
 
 		@Override
+		public boolean isTrue(QueryValueEvaluationStep expr, BindingSet bindings)
+				throws ValueExprEvaluationException, QueryEvaluationException {
+			throw new UnsupportedOperationException();
+		}
+
+		@Override
 		public FederatedService getService(String serviceUrl) throws QueryEvaluationException {
 			throw new UnsupportedOperationException();
 		}
@@ -70,13 +89,23 @@ public class OrderComparatorTest {
 		@Override
 		public void setOptimizerPipeline(QueryOptimizerPipeline pipeline) {
 			// TODO Auto-generated method stub
-
 		}
 
 		@Override
 		public TupleExpr optimize(TupleExpr expr, EvaluationStatistics evaluationStatistics, BindingSet bindings) {
 			// TODO Auto-generated method stub
 			return null;
+		}
+
+		@Override
+		public QueryEvaluationMode getQueryEvaluationMode() {
+			throw new UnsupportedOperationException();
+		}
+
+		@Override
+		public void setQueryEvaluationMode(QueryEvaluationMode queryEvaluationMode) {
+			// TODO Auto-generated method stub
+
 		}
 	}
 
@@ -94,27 +123,27 @@ public class OrderComparatorTest {
 		}
 	}
 
-	private EvaluationStrategyStub strategy = new EvaluationStrategyStub();
+	private final EvaluationStrategyStub strategy = new EvaluationStrategyStub();
 
-	private Order order = new Order();
+	private final Order order = new Order();
 
-	private OrderElem asc = new OrderElem();
+	private final OrderElem asc = new OrderElem();
 
-	private OrderElem desc = new OrderElem();
+	private final OrderElem desc = new OrderElem();
 
-	private ComparatorStub cmp = new ComparatorStub();
+	private final ComparatorStub cmp = new ComparatorStub();
 
-	private int ZERO = 0;
+	private final int ZERO = 0;
 
-	private int POS = 378;
+	private final int POS = 378;
 
-	private int NEG = -7349;
+	private final int NEG = -7349;
 
 	@Test
 	public void testEquals() throws Exception {
 		order.addElement(asc);
-		cmp.setIterator(Arrays.asList(ZERO).iterator());
-		OrderComparator sud = new OrderComparator(strategy, order, cmp);
+		cmp.setIterator(List.of(ZERO).iterator());
+		OrderComparator sud = new OrderComparator(strategy, order, cmp, context);
 		assertTrue(sud.compare(null, null) == 0);
 	}
 
@@ -123,7 +152,7 @@ public class OrderComparatorTest {
 		order.addElement(asc);
 		order.addElement(asc);
 		cmp.setIterator(Arrays.asList(ZERO, POS).iterator());
-		OrderComparator sud = new OrderComparator(strategy, order, cmp);
+		OrderComparator sud = new OrderComparator(strategy, order, cmp, context);
 		assertTrue(sud.compare(null, null) > 0);
 	}
 
@@ -132,67 +161,67 @@ public class OrderComparatorTest {
 		order.addElement(asc);
 		order.addElement(asc);
 		cmp.setIterator(Arrays.asList(POS, NEG).iterator());
-		OrderComparator sud = new OrderComparator(strategy, order, cmp);
+		OrderComparator sud = new OrderComparator(strategy, order, cmp, context);
 		assertTrue(sud.compare(null, null) > 0);
 	}
 
 	@Test
 	public void testAscLessThan() throws Exception {
 		order.addElement(asc);
-		cmp.setIterator(Arrays.asList(NEG).iterator());
-		OrderComparator sud = new OrderComparator(strategy, order, cmp);
+		cmp.setIterator(List.of(NEG).iterator());
+		OrderComparator sud = new OrderComparator(strategy, order, cmp, context);
 		assertTrue(sud.compare(null, null) < 0);
 	}
 
 	@Test
 	public void testAscGreaterThan() throws Exception {
 		order.addElement(asc);
-		cmp.setIterator(Arrays.asList(POS).iterator());
-		OrderComparator sud = new OrderComparator(strategy, order, cmp);
+		cmp.setIterator(List.of(POS).iterator());
+		OrderComparator sud = new OrderComparator(strategy, order, cmp, context);
 		assertTrue(sud.compare(null, null) > 0);
 	}
 
 	@Test
 	public void testDescLessThan() throws Exception {
 		order.addElement(desc);
-		cmp.setIterator(Arrays.asList(NEG).iterator());
-		OrderComparator sud = new OrderComparator(strategy, order, cmp);
+		cmp.setIterator(List.of(NEG).iterator());
+		OrderComparator sud = new OrderComparator(strategy, order, cmp, context);
 		assertTrue(sud.compare(null, null) > 0);
 	}
 
 	@Test
 	public void testDescGreaterThan() throws Exception {
 		order.addElement(desc);
-		cmp.setIterator(Arrays.asList(POS).iterator());
-		OrderComparator sud = new OrderComparator(strategy, order, cmp);
+		cmp.setIterator(List.of(POS).iterator());
+		OrderComparator sud = new OrderComparator(strategy, order, cmp, context);
 		assertTrue(sud.compare(null, null) < 0);
 	}
 
 	@Test
 	public void testDisjunctBindingNames() throws Exception {
-		OrderComparator sud = new OrderComparator(strategy, order, cmp);
+		OrderComparator sud = new OrderComparator(strategy, order, cmp, context);
 		QueryBindingSet a = new QueryBindingSet();
 		QueryBindingSet b = new QueryBindingSet();
-		a.addBinding("a", ValueFactoryImpl.getInstance().createLiteral("a"));
-		b.addBinding("b", ValueFactoryImpl.getInstance().createLiteral("b"));
+		a.addBinding("a", SimpleValueFactory.getInstance().createLiteral("a"));
+		b.addBinding("b", SimpleValueFactory.getInstance().createLiteral("b"));
 		assertTrue(sud.compare(a, b) != 0);
 		assertTrue(sud.compare(a, b) != sud.compare(b, a));
 	}
 
 	@Test
 	public void testEqualBindingNamesUnequalValues() {
-		OrderComparator sud = new OrderComparator(strategy, order, new ValueComparator());
+		OrderComparator sud = new OrderComparator(strategy, order, new ValueComparator(), context);
 		QueryBindingSet a = new QueryBindingSet();
 		QueryBindingSet b = new QueryBindingSet();
-		a.addBinding("a", ValueFactoryImpl.getInstance().createLiteral("ab"));
-		a.addBinding("b", ValueFactoryImpl.getInstance().createLiteral("b"));
-		b.addBinding("b", ValueFactoryImpl.getInstance().createLiteral("b"));
-		b.addBinding("a", ValueFactoryImpl.getInstance().createLiteral("ac"));
+		a.addBinding("a", SimpleValueFactory.getInstance().createLiteral("ab"));
+		a.addBinding("b", SimpleValueFactory.getInstance().createLiteral("b"));
+		b.addBinding("b", SimpleValueFactory.getInstance().createLiteral("b"));
+		b.addBinding("a", SimpleValueFactory.getInstance().createLiteral("ac"));
 		assertTrue(sud.compare(a, b) < 0);
 		assertTrue(sud.compare(a, b) != sud.compare(b, a));
 	}
 
-	@Before
+	@BeforeEach
 	public void setUp() throws Exception {
 		asc.setAscending(true);
 		desc.setAscending(false);
