@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.sail.nativerdf;
 
@@ -23,7 +26,7 @@ import org.eclipse.rdf4j.model.IRI;
 import org.eclipse.rdf4j.model.Literal;
 import org.eclipse.rdf4j.model.Resource;
 import org.eclipse.rdf4j.model.Value;
-import org.eclipse.rdf4j.model.impl.AbstractValueFactory;
+import org.eclipse.rdf4j.model.impl.SimpleValueFactory;
 import org.eclipse.rdf4j.model.util.Literals;
 import org.eclipse.rdf4j.model.vocabulary.RDF;
 import org.eclipse.rdf4j.model.vocabulary.XSD;
@@ -39,13 +42,11 @@ import org.eclipse.rdf4j.sail.nativerdf.model.NativeValue;
  * File-based indexed storage and retrieval of RDF values. ValueStore maps RDF values to integer IDs and vice-versa.
  *
  * @author Arjohn Kampman
- *
- * @deprecated since 3.0. This feature is for internal use only: its existence, signature or behavior may change without
- *             warning from one release to the next.
+ * @apiNote This feature is for internal use only: its existence, signature or behavior may change without warning from
+ *          one release to the next.
  */
 @InternalUseOnly
-@Deprecated
-public class ValueStore extends AbstractValueFactory {
+public class ValueStore extends SimpleValueFactory {
 
 	/*-----------*
 	 * Constants *
@@ -174,8 +175,8 @@ public class ValueStore extends AbstractValueFactory {
 	 * Gets the value for the specified ID.
 	 *
 	 * @param id A value ID.
-	 * @return The value for the ID, or <tt>null</tt> no such value could be found.
-	 * @exception IOException If an I/O error occurred.
+	 * @return The value for the ID, or <var>null</var> no such value could be found.
+	 * @throws IOException If an I/O error occurred.
 	 */
 	public NativeValue getValue(int id) throws IOException {
 		// Check value cache
@@ -202,7 +203,7 @@ public class ValueStore extends AbstractValueFactory {
 	 *
 	 * @param value A value.
 	 * @return The ID for the specified value, or {@link NativeValue#UNKNOWN_ID} if no such ID could be found.
-	 * @exception IOException If an I/O error occurred.
+	 * @throws IOException If an I/O error occurred.
 	 */
 	public int getID(Value value) throws IOException {
 		// Try to get the internal ID from the value itself
@@ -256,7 +257,7 @@ public class ValueStore extends AbstractValueFactory {
 					// Store id in cache
 					NativeValue nv = getNativeValue(value);
 					nv.setInternalID(id, revision);
-					valueIDCache.put(nv, new Integer(id));
+					valueIDCache.put(nv, Integer.valueOf(id));
 				}
 			}
 
@@ -272,7 +273,7 @@ public class ValueStore extends AbstractValueFactory {
 	 *
 	 * @param value The Value to store.
 	 * @return The ID that has been assigned to the value.
-	 * @exception IOException If an I/O error occurred.
+	 * @throws IOException If an I/O error occurred.
 	 */
 	public int storeValue(Value value) throws IOException {
 		// Try to get the internal ID from the value itself
@@ -325,7 +326,7 @@ public class ValueStore extends AbstractValueFactory {
 	/**
 	 * Removes all values from the ValueStore.
 	 *
-	 * @exception IOException If an I/O error occurred.
+	 * @throws IOException If an I/O error occurred.
 	 */
 	public void clear() throws IOException {
 		try {
@@ -337,8 +338,6 @@ public class ValueStore extends AbstractValueFactory {
 				valueIDCache.clear();
 				namespaceCache.clear();
 				namespaceIDCache.clear();
-
-				initBNodeParams();
 
 				setNewRevision();
 			} finally {
@@ -352,7 +351,7 @@ public class ValueStore extends AbstractValueFactory {
 	/**
 	 * Synchronizes any changes that are cached in memory to disk.
 	 *
-	 * @exception IOException If an I/O error occurred.
+	 * @throws IOException If an I/O error occurred.
 	 */
 	public void sync() throws IOException {
 		dataStore.sync();
@@ -361,7 +360,7 @@ public class ValueStore extends AbstractValueFactory {
 	/**
 	 * Closes the ValueStore, releasing any file references, etc. Once closed, the ValueStore can no longer be used.
 	 *
-	 * @exception IOException If an I/O error occurred.
+	 * @throws IOException If an I/O error occurred.
 	 */
 	public void close() throws IOException {
 		dataStore.close();
