@@ -1,8 +1,18 @@
+/*******************************************************************************
+ * Copyright (c) 2020 Eclipse RDF4J contributors.
+ *
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Distribution License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
+ *******************************************************************************/
+
 package org.eclipse.rdf4j.sail.shacl.ast.planNodes;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -12,6 +22,7 @@ import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
+import org.eclipse.rdf4j.model.Resource;
 import org.eclipse.rdf4j.model.Value;
 import org.eclipse.rdf4j.query.BindingSet;
 import org.eclipse.rdf4j.query.algebra.evaluation.util.ValueComparator;
@@ -22,79 +33,106 @@ import org.slf4j.LoggerFactory;
 
 public class ValidationTuple {
 
+	private static final Resource[] NULL_CONTEXT = { null };
+
 	private static final Logger logger = LoggerFactory.getLogger(ValidationTuple.class);
 	private static final ValueComparator valueComparator = new ValueComparator();
 
 	// all fields should be immutable
-	private final List<Value> chain;
+	private final Value[] chain;
 	private final ConstraintComponent.Scope scope;
 	private final boolean propertyShapeScopeWithValue;
 	private final List<ValidationResult> validationResults;
 	private final Set<ValidationTuple> compressedTuples;
 
+	private final Resource[] contexts;
+
 	public ValidationTuple(BindingSet bindingSet, String[] variables, ConstraintComponent.Scope scope,
-			boolean hasValue) {
-		this(bindingSet, Arrays.asList(variables), scope, hasValue);
+			boolean hasValue, Resource[] contexts) {
+		this(bindingSet, Arrays.asList(variables), scope, hasValue, contexts);
 	}
 
 	public ValidationTuple(BindingSet bindingSet, List<String> variables, ConstraintComponent.Scope scope,
-			boolean hasValue) {
-		List<Value> chain = new ArrayList<>();
-		for (String variable : variables) {
-			chain.add(bindingSet.getValue(variable));
+			boolean hasValue, Resource[] contexts) {
+
+		chain = new Value[variables.size()];
+
+		for (int i = 0; i < variables.size(); i++) {
+			chain[i] = bindingSet.getValue(variables.get(i));
 		}
-		this.chain = Collections.unmodifiableList(chain);
+
 		this.scope = scope;
 		this.propertyShapeScopeWithValue = hasValue;
-		this.validationResults = Collections.emptyList();
-		this.compressedTuples = Collections.emptySet();
+		this.validationResults = List.of();
+		this.compressedTuples = Set.of();
+		this.contexts = contexts;
 	}
 
-	public ValidationTuple(List<Value> targets, ConstraintComponent.Scope scope, boolean hasValue) {
-		this.chain = Collections.unmodifiableList(targets);
+	public ValidationTuple(List<Value> chain, ConstraintComponent.Scope scope, boolean hasValue, Resource[] contexts) {
+		this.chain = chain.toArray(new Value[0]);
 		this.scope = scope;
 		this.propertyShapeScopeWithValue = hasValue;
-		this.validationResults = Collections.emptyList();
-		this.compressedTuples = Collections.emptySet();
-
+		this.validationResults = List.of();
+		this.compressedTuples = Set.of();
+		this.contexts = contexts;
 	}
 
-	public ValidationTuple(Value a, Value c, ConstraintComponent.Scope scope, boolean hasValue) {
-		this.chain = Collections.unmodifiableList(Arrays.asList(a, c));
+	// We will assume that the provided chain will not be mutated elsewhere.
+	public ValidationTuple(Value[] chain, ConstraintComponent.Scope scope, boolean hasValue, Resource[] contexts) {
+		this.chain = chain;
 		this.scope = scope;
 		this.propertyShapeScopeWithValue = hasValue;
-		this.validationResults = Collections.emptyList();
-		this.compressedTuples = Collections.emptySet();
-
+		this.validationResults = List.of();
+		this.compressedTuples = Set.of();
+		this.contexts = contexts;
 	}
 
-	public ValidationTuple(Value subject, ConstraintComponent.Scope scope, boolean hasValue) {
-		this.chain = Collections.singletonList(subject);
+	public ValidationTuple(Value a, Value c, ConstraintComponent.Scope scope, boolean hasValue, Resource context) {
+		this(a, c, scope, hasValue, context == null ? NULL_CONTEXT : new Resource[] { context });
+	}
+
+	public ValidationTuple(Value a, Value c, ConstraintComponent.Scope scope, boolean hasValue, Resource[] contexts) {
+		chain = new Value[] { a, c };
+
 		this.scope = scope;
 		this.propertyShapeScopeWithValue = hasValue;
-		this.validationResults = Collections.emptyList();
-		this.compressedTuples = Collections.emptySet();
-
+		this.validationResults = List.of();
+		this.compressedTuples = Set.of();
+		this.contexts = contexts;
 	}
 
-	private ValidationTuple(List<ValidationResult> validationResults, List<Value> chain,
+	public ValidationTuple(Value subject, ConstraintComponent.Scope scope, boolean hasValue, Resource context) {
+		this(subject, scope, hasValue, new Resource[] { context });
+	}
+
+	public ValidationTuple(Value subject, ConstraintComponent.Scope scope, boolean hasValue, Resource[] contexts) {
+		chain = new Value[] { subject };
+		this.scope = scope;
+		this.propertyShapeScopeWithValue = hasValue;
+		this.validationResults = List.of();
+		this.compressedTuples = Set.of();
+		this.contexts = contexts;
+	}
+
+	private ValidationTuple(List<ValidationResult> validationResults, Value[] chain,
 			ConstraintComponent.Scope scope, boolean propertyShapeScopeWithValue,
-			Set<ValidationTuple> compressedTuples) {
+			Set<ValidationTuple> compressedTuples, Resource[] contexts) {
 		this.validationResults = Collections.unmodifiableList(validationResults);
-		this.chain = Collections.unmodifiableList(chain);
+		this.chain = chain;
 		this.scope = scope;
 		this.propertyShapeScopeWithValue = propertyShapeScopeWithValue;
-		this.compressedTuples = Collections.unmodifiableSet(compressedTuples);
+		this.compressedTuples = compressedTuples.isEmpty() ? Set.of() : Collections.unmodifiableSet(compressedTuples);
+		this.contexts = contexts;
 
 	}
 
-	public ValidationTuple(ValidationTuple temp, Set<ValidationTuple> compressedTuples) {
-		this.validationResults = temp.validationResults;
-		this.chain = temp.chain;
-		this.scope = temp.scope;
-		this.propertyShapeScopeWithValue = temp.propertyShapeScopeWithValue;
-		this.compressedTuples = Collections.unmodifiableSet(compressedTuples);
-
+	public ValidationTuple(ValidationTuple tuple, Set<ValidationTuple> compressedTuples) {
+		this.validationResults = tuple.validationResults;
+		this.chain = tuple.chain;
+		this.scope = tuple.scope;
+		this.propertyShapeScopeWithValue = tuple.propertyShapeScopeWithValue;
+		this.compressedTuples = compressedTuples.isEmpty() ? Set.of() : Collections.unmodifiableSet(compressedTuples);
+		this.contexts = tuple.contexts;
 	}
 
 	public boolean sameTargetAs(ValidationTuple other) {
@@ -103,7 +141,6 @@ public class ValidationTuple {
 		Value currentRight = other.getActiveTarget();
 
 		return current.equals(currentRight);
-
 	}
 
 	public boolean hasValue() {
@@ -114,7 +151,7 @@ public class ValidationTuple {
 	public Value getValue() {
 		assert scope != null;
 		if (hasValue()) {
-			return chain.get(chain.size() - 1);
+			return chain[(chain.length - 1)];
 		}
 
 		return null;
@@ -136,8 +173,8 @@ public class ValidationTuple {
 
 		int min = Math.min(getFullChainSize(false), other.getFullChainSize(false));
 
-		Collection<Value> targetChain = getTargetChain(false);
-		ArrayList<Value> otherTargetChain = new ArrayList<>(other.getTargetChain(false));
+		List<Value> targetChain = getTargetChain(false);
+		List<Value> otherTargetChain = other.getTargetChain(false);
 
 		Iterator<Value> iterator = targetChain.iterator();
 
@@ -165,29 +202,28 @@ public class ValidationTuple {
 			validationResults = Collections.singletonList(validationResult.apply(this));
 		}
 
-		Set<ValidationTuple> compressedTuples = this.compressedTuples.stream()
-				.map(t -> t.addValidationResult(validationResult))
-				.collect(Collectors.toSet());
+		Set<ValidationTuple> compressedTuples = enrichCompressedTuples(t -> t.addValidationResult(validationResult));
 
-		return new ValidationTuple(validationResults, chain, scope, propertyShapeScopeWithValue, compressedTuples);
+		return new ValidationTuple(validationResults, chain, scope, propertyShapeScopeWithValue, compressedTuples,
+				contexts);
 	}
 
 	public Value getActiveTarget() {
 		assert scope != null;
 		if (!propertyShapeScopeWithValue || scope != ConstraintComponent.Scope.propertyShape) {
-			return chain.get(chain.size() - 1);
+			return chain[chain.length - 1];
 		}
 
-		assert chain.size() >= 2;
+		assert chain.length >= 2;
 
-		return chain.get(chain.size() - 2);
+		return chain[chain.length - 2];
 
 	}
 
 	@Override
 	public String toString() {
 		return "ValidationTuple{" +
-				"chain=" + chain +
+				"chain=" + Arrays.toString(chain) +
 				", scope=" + scope +
 				", propertyShapeScopeWithValue=" + propertyShapeScopeWithValue +
 //			", validationResults=" + validationResults +
@@ -199,22 +235,25 @@ public class ValidationTuple {
 		assert scope == ConstraintComponent.Scope.propertyShape;
 
 		if (compressedTuples.isEmpty()) {
-			List<Value> chain = this.chain;
+			Value[] chain;
 			boolean propertyShapeScopeWithValue = this.propertyShapeScopeWithValue;
 			ConstraintComponent.Scope scope = ConstraintComponent.Scope.nodeShape;
 
 			if (this.propertyShapeScopeWithValue) {
 				propertyShapeScopeWithValue = false;
-				chain = chain.subList(0, chain.size() - 1);
+				chain = Arrays.copyOf(this.chain, this.chain.length - 1);
+			} else {
+				chain = this.chain;
 			}
 
-			return Collections.singletonList(new ValidationTuple(this.validationResults, chain, scope,
-					propertyShapeScopeWithValue, Collections.emptySet()));
+			return Collections
+					.singletonList(new ValidationTuple(this.validationResults, chain, scope,
+							propertyShapeScopeWithValue, Set.of(), contexts));
 
 		} else {
 			return this.compressedTuples.stream()
 					.map(t -> {
-						List<Value> chain = t.chain;
+						List<Value> chain = Arrays.asList(t.chain);
 
 						boolean propertyShapeScopeWithValue = t.propertyShapeScopeWithValue;
 						ConstraintComponent.Scope scope = ConstraintComponent.Scope.nodeShape;
@@ -224,8 +263,9 @@ public class ValidationTuple {
 							chain = chain.subList(0, chain.size() - 1);
 						}
 
-						return new ValidationTuple(t.validationResults, chain, scope, propertyShapeScopeWithValue,
-								Collections.emptySet());
+						return new ValidationTuple(t.validationResults, chain.toArray(new Value[0]), scope,
+								propertyShapeScopeWithValue,
+								Set.of(), t.contexts);
 
 					})
 					.collect(Collectors.toList());
@@ -236,7 +276,7 @@ public class ValidationTuple {
 
 	public List<ValidationTuple> shiftToPropertyShapeScope() {
 		assert scope == ConstraintComponent.Scope.nodeShape;
-		assert chain.size() >= 2;
+		assert chain.length >= 2;
 
 		boolean propertyShapeScopeWithValue = true;
 		ConstraintComponent.Scope scope = ConstraintComponent.Scope.propertyShape;
@@ -245,39 +285,38 @@ public class ValidationTuple {
 
 			return compressedTuples.stream()
 					.map(t -> new ValidationTuple(t.validationResults, t.chain, scope, propertyShapeScopeWithValue,
-							Collections.emptySet()))
+							Set.of(), t.contexts))
 					.collect(Collectors.toList());
 
 		} else {
 			return Collections.singletonList(
 					new ValidationTuple(this.validationResults, chain, scope, propertyShapeScopeWithValue,
-							Collections.emptySet()));
+							Set.of(), contexts));
 		}
 
 	}
 
 	public int getFullChainSize(boolean includePropertyShapeValue) {
 		if (!includePropertyShapeValue && propertyShapeScopeWithValue) {
-			return chain.size() - 1;
+			return chain.length - 1;
 		}
 
-		return chain.size();
+		return chain.length;
 
 	}
 
 	/**
 	 * This is only the target part. For property shape scope it will not include the value.
 	 *
-	 * @return
 	 * @param includePropertyShapeValues
 	 */
 	public List<Value> getTargetChain(boolean includePropertyShapeValues) {
 
 		if (scope == ConstraintComponent.Scope.propertyShape && hasValue() && !includePropertyShapeValues) {
-			return chain.stream().limit(chain.size() - 1).collect(Collectors.toList());
+			return Collections.unmodifiableList(Arrays.asList(chain).subList(0, chain.length - 1));
 		}
 
-		return new ArrayList<>(chain);
+		return Collections.unmodifiableList(Arrays.asList(chain));
 	}
 
 	public ValidationTuple setValue(Value value) {
@@ -285,24 +324,35 @@ public class ValidationTuple {
 			return this;
 		}
 
-		List<Value> chain = new ArrayList<>(this.chain);
+		assert scope == ConstraintComponent.Scope.propertyShape
+				: "Can't set value on NodeShape scoped ValidationTuple because it will also change the target!";
 
-		if (scope == ConstraintComponent.Scope.propertyShape) {
-			if (propertyShapeScopeWithValue) {
-				chain.remove(this.chain.size() - 1);
-			}
-			chain.add(value);
+		Value[] chain;
+
+		if (propertyShapeScopeWithValue) {
+			// we will replace the last value, so we just need a copy because the chain should be immutable
+			chain = Arrays.copyOf(this.chain, this.chain.length);
 		} else {
-			throw new IllegalStateException(
-					"Can't set value on NodeShape scoped ValidationTuple because it will also change the target!");
-
+			chain = Arrays.copyOf(this.chain, this.chain.length + 1);
 		}
 
-		boolean propertyShapeScopeWithValue = true;
-		Set<ValidationTuple> compressedTuples = this.compressedTuples.stream()
-				.map(t -> t.setValue(value))
+		chain[chain.length - 1] = value;
+
+		Set<ValidationTuple> compressedTuples = enrichCompressedTuples(t -> t.setValue(value));
+
+		return new ValidationTuple(this.validationResults, chain, scope, true, compressedTuples, contexts);
+	}
+
+	private Set<ValidationTuple> enrichCompressedTuples(
+			Function<ValidationTuple, ValidationTuple> validationTupleValidationTupleFunction) {
+		if (compressedTuples.isEmpty()) {
+			return compressedTuples;
+		}
+
+		return this.compressedTuples.stream()
+				.map(validationTupleValidationTupleFunction)
 				.collect(Collectors.toSet());
-		return new ValidationTuple(this.validationResults, chain, scope, propertyShapeScopeWithValue, compressedTuples);
+
 	}
 
 	public int compareValue(ValidationTuple other) {
@@ -316,14 +366,11 @@ public class ValidationTuple {
 		if (scope == ConstraintComponent.Scope.propertyShape) {
 			if (propertyShapeScopeWithValue) {
 
-				List<Value> chain = this.chain.subList(0, this.chain.size() - 1);
-				boolean propertyShapeScopeWithValue = false;
-				Set<ValidationTuple> compressedTuples = this.compressedTuples.stream()
-						.map(ValidationTuple::trimToTarget)
-						.collect(Collectors.toSet());
+				Value[] chain = Arrays.copyOf(this.chain, this.chain.length - 1);
 
-				return new ValidationTuple(this.validationResults, chain, scope, propertyShapeScopeWithValue,
-						compressedTuples);
+				Set<ValidationTuple> compressedTuples = enrichCompressedTuples(ValidationTuple::trimToTarget);
+
+				return new ValidationTuple(validationResults, chain, scope, false, compressedTuples, contexts);
 			}
 		}
 		return this;
@@ -332,32 +379,35 @@ public class ValidationTuple {
 	public List<ValidationTuple> pop() {
 
 		if (compressedTuples.isEmpty()) {
-			List<Value> chain = this.chain;
+
+			Value[] chain;
+
 			boolean propertyShapeScopeWithValue = this.propertyShapeScopeWithValue;
 			if (getScope() == ConstraintComponent.Scope.propertyShape) {
 				if (hasValue()) {
-					assert chain.size() > 1 : "Attempting to pop chain will not leave any elements on the chain! "
-							+ toString();
-					chain = chain.subList(0, chain.size() - 1);
+					assert this.chain.length > 1 : "Attempting to pop chain will not leave any elements on the chain! "
+							+ this;
+					chain = Arrays.copyOf(this.chain, this.chain.length - 1);
 				} else {
 					propertyShapeScopeWithValue = true;
+					chain = this.chain;
 				}
 			} else {
-				assert chain.size() > 1 : "Attempting to pop chain will not leave any elements on the chain! "
-						+ toString();
-				chain = chain.subList(0, chain.size() - 1);
+				assert this.chain.length > 1 : "Attempting to pop chain will not leave any elements on the chain! "
+						+ this;
+				chain = Arrays.copyOf(this.chain, this.chain.length - 1);
 			}
 
 			return Collections.singletonList(
 					new ValidationTuple(this.validationResults, chain, scope, propertyShapeScopeWithValue,
-							Collections.emptySet()));
+							Set.of(), contexts));
 		} else {
 
 			return compressedTuples.stream().flatMap(t1 -> {
 				return t1.pop()
 						.stream()
 						.map(t -> new ValidationTuple(t.validationResults, t.chain, t.scope,
-								t.propertyShapeScopeWithValue, t.compressedTuples));
+								t.propertyShapeScopeWithValue, t.compressedTuples, t.contexts));
 			}).collect(Collectors.toList());
 
 		}
@@ -377,26 +427,60 @@ public class ValidationTuple {
 			return false;
 		}
 		ValidationTuple that = (ValidationTuple) o;
-		return propertyShapeScopeWithValue == that.propertyShapeScopeWithValue && chain.equals(that.chain)
+		return propertyShapeScopeWithValue == that.propertyShapeScopeWithValue && Arrays.equals(chain, that.chain)
 				&& scope == that.scope && validationResults.equals(that.validationResults)
 				&& compressedTuples.equals(that.compressedTuples);
 	}
 
 	@Override
 	public int hashCode() {
-		return Objects.hash(chain, scope, propertyShapeScopeWithValue, validationResults, compressedTuples);
+		return Objects.hash(Arrays.hashCode(chain), scope, propertyShapeScopeWithValue, validationResults,
+				compressedTuples);
 	}
 
 	public ValidationTuple join(ValidationTuple right) {
 
-		HashSet<ValidationTuple> compressedTuples = new HashSet<>(this.compressedTuples);
-		compressedTuples.addAll(right.getCompressedTuples());
+		Set<ValidationTuple> compressedTuples;
+		if (this.compressedTuples.isEmpty()) {
+			compressedTuples = right.getCompressedTuples();
+		} else if (right.compressedTuples.isEmpty()) {
+			compressedTuples = this.compressedTuples;
+		} else {
+			compressedTuples = new HashSet<>(this.compressedTuples);
+			compressedTuples.addAll(right.getCompressedTuples());
+		}
+
+		Resource[] contexts;
+
+		if (this.contexts != right.contexts) {
+			assert this.contexts != null;
+			assert right.contexts != null;
+			if (this.contexts.length == 1 && right.contexts.length == 1
+					&& this.contexts[0] == right.contexts[0]) {
+				contexts = this.contexts;
+			} else if (this.contexts.length > 0 && right.contexts.length > 0) {
+				contexts = Arrays.copyOf(this.contexts, this.contexts.length + right.contexts.length);
+				System.arraycopy(right.contexts, 0, contexts, this.contexts.length, right.contexts.length);
+			} else if (right.contexts.length > 0) {
+				// this.contexts must be an empty array
+				contexts = right.contexts;
+			} else {
+				contexts = this.contexts;
+			}
+		} else {
+			contexts = this.contexts;
+		}
 
 		ValidationTuple validationTuple = new ValidationTuple(validationResults, chain, scope,
-				propertyShapeScopeWithValue, compressedTuples);
+				propertyShapeScopeWithValue, compressedTuples, contexts);
 		if (scope == ConstraintComponent.Scope.propertyShape) {
 			validationTuple = validationTuple.setValue(right.getValue());
 		}
 		return validationTuple;
 	}
+
+	public Resource[] getContexts() {
+		return contexts;
+	}
+
 }
