@@ -1,23 +1,23 @@
 /*******************************************************************************
  * Copyright (c) 2018 Eclipse RDF4J contributors.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 
 package org.eclipse.rdf4j.sail.shacl;
 
-import static junit.framework.TestCase.assertTrue;
-
-import java.util.ArrayDeque;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import org.eclipse.rdf4j.model.Resource;
 import org.eclipse.rdf4j.model.Value;
 import org.eclipse.rdf4j.model.impl.SimpleValueFactory;
 import org.eclipse.rdf4j.sail.shacl.ast.constraintcomponents.ConstraintComponent;
@@ -27,30 +27,19 @@ import org.eclipse.rdf4j.sail.shacl.ast.planNodes.PlanNode;
 import org.eclipse.rdf4j.sail.shacl.ast.planNodes.ValidationTuple;
 import org.eclipse.rdf4j.sail.shacl.mock.MockConsumePlanNode;
 import org.eclipse.rdf4j.sail.shacl.mock.MockInputPlanNode;
-import org.junit.AfterClass;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 /**
  * @author Håvard Ottestad
  */
 public class InnerJoinTest {
-
-	@BeforeClass
-	public static void beforeClass() {
-		// GlobalValidationExecutionLogging.loggingEnabled = true;
-
-	}
-
-	@AfterClass
-	public static void afterClass() {
-		GlobalValidationExecutionLogging.loggingEnabled = false;
-	}
+	public static final Resource[] CONTEXTS = { null };
 
 	@Test
 	public void testSimple() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a"));
+		PlanNode left = new MockInputPlanNode(List.of("a"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a", "b"));
 
 		PlanNode innerJoin = new InnerJoin(left, right).getJoined(BufferedPlanNode.class);
@@ -66,7 +55,7 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple2() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a1", "b"));
 
 		PlanNode innerJoin = new InnerJoin(left, right).getJoined(BufferedPlanNode.class);
@@ -82,7 +71,7 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple3() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a2", "b"));
 
 		PlanNode innerJoin = new InnerJoin(left, right).getJoined(BufferedPlanNode.class);
@@ -98,8 +87,8 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple4() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"));
-		PlanNode right = new MockInputPlanNode(Arrays.asList());
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"));
+		PlanNode right = new MockInputPlanNode(List.of());
 
 		PlanNode innerJoin = new InnerJoin(left, right).getJoined(BufferedPlanNode.class);
 
@@ -115,7 +104,7 @@ public class InnerJoinTest {
 	public void testSimple5() {
 
 		PlanNode left = new MockInputPlanNode();
-		PlanNode right = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"));
+		PlanNode right = new MockInputPlanNode(List.of("a1"), List.of("a2"));
 
 		PlanNode innerJoin = new InnerJoin(left, right).getJoined(BufferedPlanNode.class);
 
@@ -130,8 +119,8 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple6() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"), Arrays.asList("a3"),
-				Arrays.asList("a4"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"), List.of("a3"),
+				List.of("a4"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a1", "b1"), Arrays.asList("a2", "b2"),
 				Arrays.asList("a3", "b3"), Arrays.asList("a4", "b4"));
 
@@ -149,7 +138,7 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple7() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a1", "b1"), Arrays.asList("a2", "b2"));
 
 		PlanNode innerJoin = new InnerJoin(left, right).getJoined(BufferedPlanNode.class);
@@ -165,7 +154,7 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple8() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"), Arrays.asList("a3"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"), List.of("a3"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a1", "b1"), Arrays.asList("a2", "b2"),
 				Arrays.asList("a3", "b3"));
 
@@ -182,8 +171,8 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple9() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"), Arrays.asList("a3"),
-				Arrays.asList("a4"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"), List.of("a3"),
+				List.of("a4"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a1", "b1"), Arrays.asList("a2", "b2"),
 				Arrays.asList("a2", "b22"), Arrays.asList("a3", "b3"), Arrays.asList("a4", "b4"));
 
@@ -201,8 +190,8 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple10() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"), Arrays.asList("a3"),
-				Arrays.asList("a4"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"), List.of("a3"),
+				List.of("a4"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a1", "b1"), Arrays.asList("a2", "b2"),
 				Arrays.asList("a2", "b22"), Arrays.asList("a4", "b4"));
 
@@ -220,8 +209,8 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple11() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"), Arrays.asList("a3"),
-				Arrays.asList("a4"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"), List.of("a3"),
+				List.of("a4"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a2", "b2"), Arrays.asList("a2", "b22"),
 				Arrays.asList("a4", "b4"));
 
@@ -238,8 +227,8 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple12() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"), Arrays.asList("a3"),
-				Arrays.asList("a4"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"), List.of("a3"),
+				List.of("a4"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a2", "b2"), Arrays.asList("a2", "b22"));
 
 		PlanNode innerJoin = new InnerJoin(left, right).getJoined(BufferedPlanNode.class);
@@ -255,8 +244,8 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple13() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"), Arrays.asList("a3"),
-				Arrays.asList("a4"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"), List.of("a3"),
+				List.of("a4"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a1", "b1"), Arrays.asList("a1", "b11"),
 				Arrays.asList("a2", "b2"), Arrays.asList("a2", "b22"));
 
@@ -272,7 +261,7 @@ public class InnerJoinTest {
 	}
 
 	@SafeVarargs
-	private final void verify(List<ValidationTuple> actual, List<String>... expect) {
+	private void verify(List<ValidationTuple> actual, List<String>... expect) {
 
 		Set<ValidationTuple> collect = Arrays.stream(expect)
 				.map(strings -> strings.stream()
@@ -281,14 +270,14 @@ public class InnerJoinTest {
 						.collect(Collectors.toList()))
 				.map(v -> {
 					assert (v.size() == 2);
-					return new ValidationTuple(v, ConstraintComponent.Scope.propertyShape, true);
+					return new ValidationTuple(v, ConstraintComponent.Scope.propertyShape, true, CONTEXTS);
 				})
 				.collect(Collectors.toSet());
 
 		Set<ValidationTuple> actualSet = new HashSet<>(actual);
 
-		assertTrue(collect.containsAll(actualSet));
-		assertTrue(actualSet.containsAll(collect));
+		Assertions.assertTrue(collect.containsAll(actualSet));
+		Assertions.assertTrue(actualSet.containsAll(collect));
 
 	}
 
