@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.workbench.commands;
 
@@ -11,11 +14,10 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.util.Arrays;
+import java.util.List;
 
 import javax.servlet.http.HttpServletResponse;
 
-import org.apache.commons.fileupload.FileUploadException;
 import org.eclipse.rdf4j.model.Resource;
 import org.eclipse.rdf4j.query.QueryResultHandlerException;
 import org.eclipse.rdf4j.repository.RepositoryConnection;
@@ -38,7 +40,7 @@ public class AddServlet extends TransformationServlet {
 
 	@Override
 	protected void doPost(WorkbenchRequest req, HttpServletResponse resp, String xslPath)
-			throws IOException, RepositoryException, FileUploadException, QueryResultHandlerException {
+			throws IOException, RepositoryException, QueryResultHandlerException {
 		try {
 			String baseURI = req.getParameter("baseURI");
 			String contentType = req.getParameter("Content-Type");
@@ -62,7 +64,7 @@ public class AddServlet extends TransformationServlet {
 			TupleResultBuilder builder = getTupleResultBuilder(req, resp, resp.getOutputStream());
 			builder.transform(xslPath, "add.xsl");
 			builder.start("error-message", "baseURI", CONTEXT, "Content-Type");
-			builder.link(Arrays.asList(INFO));
+			builder.link(List.of(INFO));
 			String baseURI = req.getParameter("baseURI");
 			String context = req.getParameter(CONTEXT);
 			String contentType = req.getParameter("Content-Type");
@@ -77,7 +79,7 @@ public class AddServlet extends TransformationServlet {
 			throw new BadRequestException("No Content-Type provided");
 		}
 
-		RDFFormat format = null;
+		RDFFormat format;
 		if ("autodetect".equals(contentType)) {
 			format = Rio.getParserFormatForFileName(contentFileName)
 					.orElseThrow(() -> new BadRequestException(
@@ -100,7 +102,7 @@ public class AddServlet extends TransformationServlet {
 			throw new BadRequestException("No Content-Type provided");
 		}
 
-		RDFFormat format = null;
+		RDFFormat format;
 		if ("autodetect".equals(contentType)) {
 			format = Rio.getParserFormatForFileName(url.getFile())
 					.orElseThrow(() -> new BadRequestException(
@@ -125,7 +127,7 @@ public class AddServlet extends TransformationServlet {
 		// TupleResultBuilder builder = getTupleResultBuilder(req, resp);
 		builder.transform(xslPath, "add.xsl");
 		builder.start();
-		builder.link(Arrays.asList(INFO));
+		builder.link(List.of(INFO));
 		builder.end();
 	}
 
