@@ -1,15 +1,18 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.workbench.commands;
 
 import java.io.BufferedWriter;
 import java.io.PrintWriter;
-import java.util.Arrays;
+import java.util.List;
 
 import javax.servlet.http.HttpServletResponse;
 
@@ -70,7 +73,7 @@ public class DeleteServlet extends TransformationServlet {
 			throws RepositoryException, QueryResultHandlerException {
 		builder.transform(xslPath, "delete.xsl");
 		builder.start("readable", "writeable", "id", "description", "location");
-		builder.link(Arrays.asList(INFO));
+		builder.link(List.of(INFO));
 		for (RepositoryInfo info : manager.getAllRepositoryInfos()) {
 			builder.result(info.isReadable(), info.isWritable(), info.getId(), info.getDescription(),
 					info.getLocation());
