@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.workbench.commands;
 
@@ -40,7 +43,7 @@ public class SummaryServlet extends TransformationServlet {
 			throws RepositoryException, QueryEvaluationException, MalformedQueryException, QueryResultHandlerException {
 		builder.transform(xslPath, "summary.xsl");
 		builder.start("id", "description", "location", "server", "size", "contexts");
-		builder.link(Arrays.asList(INFO));
+		builder.link(List.of(INFO));
 		try (RepositoryConnection con = repository.getConnection()) {
 			String size = null;
 			String numContexts = null;
@@ -78,14 +81,14 @@ public class SummaryServlet extends TransformationServlet {
 	@SuppressWarnings("unchecked")
 	private List<Future<String>> getRepositoryStatistics(final RepositoryConnection con) throws InterruptedException {
 		List<Future<String>> futures;
-		futures = executorService.invokeAll(Arrays.asList(new Callable<String>() {
+		futures = executorService.invokeAll(Arrays.asList(new Callable<>() {
 
 			@Override
 			public String call() throws RepositoryException {
 				return Long.toString(con.size());
 			}
 
-		}, new Callable<String>() {
+		}, new Callable<>() {
 
 			@Override
 			public String call() throws RepositoryException {
