@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.workbench.proxy;
 
@@ -14,6 +17,7 @@ import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
@@ -178,7 +182,7 @@ public class WorkbenchServlet extends AbstractServlet {
 		builder.transform(this.getTransformationUrl(req), "server.xsl");
 		builder.start("error-message");
 		builder.result(
-				"The entered credentials entered either failed to authenticate to the Sesame server, or were unauthorized for the requested operation.");
+				"The entered credentials entered either failed to authenticate to the RDF4J server, or were unauthorized for the requested operation.");
 		builder.end();
 	}
 
@@ -189,12 +193,12 @@ public class WorkbenchServlet extends AbstractServlet {
 		} else {
 			manager = new RemoteRepositoryManager(param);
 		}
-		manager.initialize();
+		manager.init();
 		return manager;
 	}
 
 	private File asLocalFile(final URL rdf) throws UnsupportedEncodingException {
-		return new File(URLDecoder.decode(rdf.getFile(), "UTF-8"));
+		return new File(URLDecoder.decode(rdf.getFile(), StandardCharsets.UTF_8));
 	}
 
 	private void service(final String repoID, final HttpServletRequest req, final HttpServletResponse resp)
@@ -263,9 +267,9 @@ public class WorkbenchServlet extends AbstractServlet {
 				LOGGER.info("Setting user '{}' and their password.", user);
 				rrm.setUsernameAndPassword(user, password);
 			}
-			// initialize() required to push credentials to internal HTTP
+			// init() required to push credentials to internal HTTP
 			// client.
-			rrm.initialize();
+			rrm.init();
 		}
 	}
 }
